# catfish_counter

./: CMakeLists.txt  README.md
include/: data.h  inference.h
src/: inference.cpp  main.cpp
